--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
