--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,6 @@
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
-    "apollo-link-token-refresh": "^0.3.2",
     "apollo-upload-client": "^14.1.3",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.3",
@@ -34,7 +33,12 @@
     "next": "12.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "@apollo/react-ssr": "^3.1.2",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-token-refresh": "^0.2.6",
+    "cookie": "^0.4.0",
+    "isomorphic-unfetch": "^3.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.4",
@@ -44,6 +48,7 @@
     "@types/apollo-upload-client": "^14.1.0",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^3.1.0",
+    "@types/cookie": "^0.4.0",
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
