--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.js", "codegen.js"],
   "exclude": ["node_modules", "/**/*.test.ts"]
 }
